[gd_scene load_steps=14 format=3 uid="uid://bq7xplhy6uxs5"]

[ext_resource type="PackedScene" uid="uid://bgceni31vwcuu" path="res://scenes/bg/bg_winter.tscn" id="1_cds7w"]
[ext_resource type="Script" path="res://scenes/level_1/level_1.gd" id="1_qmjp0"]
[ext_resource type="FontFile" uid="uid://d3ftaug61a8t3" path="res://assets/fonts/Monocraft.otf" id="2_i4x8b"]
[ext_resource type="Script" path="res://scenes/level_1/back.gd" id="3_s3qxi"]
[ext_resource type="Script" path="res://scenes/level_1/player.gd" id="4_oqa4w"]
[ext_resource type="Script" path="res://scenes/level_1/cpu.gd" id="5_ad1ie"]
[ext_resource type="Script" path="res://scenes/level_1/ball.gd" id="6_t1yoa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7gdr8"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8t2gs"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txu5g"]
size = Vector2(1152, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tquju"]
size = Vector2(1152, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ymmra"]
size = Vector2(64, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0mvc"]
size = Vector2(82, 648)

[node name="Level1" type="Sprite2D"]
script = ExtResource("1_qmjp0")

[node name="bg_winter" parent="." instance=ExtResource("1_cds7w")]

[node name="Back" type="Button" parent="."]
offset_left = 29.0
offset_top = 22.0
offset_right = 108.0
offset_bottom = 93.0
theme_override_fonts/font = ExtResource("2_i4x8b")
theme_override_font_sizes/font_size = 40
text = "<-"
script = ExtResource("3_s3qxi")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("4_oqa4w")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
color = Color(0.866667, 1, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_7gdr8")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("5_ad1ie")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
color = Color(0.866667, 1, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_7gdr8")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("6_t1yoa")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.866667, 1, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_8t2gs")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -32)
shape = SubResource("RectangleShape2D_txu5g")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 676)
shape = SubResource("RectangleShape2D_tquju")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-32, 324)
shape = SubResource("RectangleShape2D_ymmra")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1192, 324)
shape = SubResource("RectangleShape2D_f0mvc")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="Hud"]
offset_left = 456.0
offset_top = 5.0
offset_right = 496.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0.866667, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_i4x8b")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="Hud"]
offset_left = 648.0
offset_top = 5.0
offset_right = 688.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0.866667, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_i4x8b")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="pressed" from="Back" to="Back" method="_on_pressed"]
[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
